# nekoasm-syntax-highlight

./: .clang-format  .gitignore  CMakeLists.txt  in.asm  main.cpp
bases/lexical/: commands.cpp  commands.h  conditional.crossings.cpp  conditional.crossings.h  data.types.cpp  data.types.h  interruptions.cpp  interruptions.h  registers.cpp  registers.h  signs.cpp  signs.h
services/: syntax.highlighter.service.cpp  syntax.highlighter.service.h
